--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
       "deploy": "vite build && vite-gh-pages"
   },
+    "homepage": "https://saurabhollato.github.io/myportfolio",
   "dependencies": {
     "@fontsource/space-grotesk": "^5.2.8",
     "framer-motion": "^12.17.0",
