--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-      "deploy": "vite build && vite-gh-pages"
+    "deploy": "vite build && vite-gh-pages"
   },
-    "homepage": "https://saurabhollato.github.io/myportfolio",
+  "homepage": "https://saurabhollato.github.io/myportfolio",
   "dependencies": {
     "@fontsource/space-grotesk": "^5.2.8",
     "framer-motion": "^12.17.0",
@@ -31,6 +31,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
