--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "vite build && vite-gh-pages"
+    "deploy": "gh-pages -d dist"
   },
   "homepage": "https://saurabhollato.github.io/myportfolio",
   "dependencies": {
