--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^7.6.2",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.8.1",
-    "tsparticles-slim": "^2.12.0"
+    "tsparticles-slim": "^2.12.0",
+    "vercel": "^43.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
